2004-12-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx_devices.c: Disabled stop_scan command for Mustek
	  BearPaw 2448 TA Plus.

2004-12-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-gphoto2.man doc/sane-microtek2.man: Fixed minor
	  glitches based on patch from Eric S. Raymond <esr@thyrsus.com>.
	* doc/descriptions/unsupported.desc: Added Benq 320p.

2004-12-04  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added Epson Perfection 4870
	Photo, vendor 0x04b8 product 0x0128.

2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c: Applied fix for allocation of gamma tables
	  (thanks to Simon Munton)

2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/unsupported.desc: removed Epson Perfection 1270

2004-12-01  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan.c backend/snapscan-scsi.c 
	  backend/snapscan-options.c doc/descriptions/snapscan.desc: 
	  Added support for Epson Perfection 1270

2004-12-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/umax1220u.desc doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Added several scanners. Moved
	  UMAX 2100U to umax1220u.desc. Moved Plustek S(T)12 to unsupported.desc.

2004-11-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/brother.desc. Updated comments. 9160 works.

2004-11-21  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Updated/added several scanners.

2004-11-21  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek-usb.c: Fixed problem, when builing supported
	  and connected device list.

2004-11-19  Rene Rebe <rene@exactcode.de>

	* sanei/sanei_usb.c configure.in: use usb_interrupt_read instead of
	  usb_bulk_read for sanei_usb_read_int. Fixes bug #300878. Added a
	  missing DBG output in sanei_usb_read_int. Check for